# Engine2020

./: .gitattributes  .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  dpi-aware.manifest  premake5.lua  vcpkg.json
Article/: CMakeLists.txt
Article/data/: preload.lab  preload.lab-debug  preload.lpack-debug  resources.lab-debug.REMOVED.git-id  resources.lab.REMOVED.git-id
Article/data/config/: config_default.yaml
Article/data/scripts/: UIElement.lua
Article/data/scripts/layers/: MainMenuLayer.lua
Article/data/scripts/scenes/: MainMenuScene.lua
Article/data/videos/: bowling.mkv.REMOVED.git-id
Article/src/: ArticleApp.cpp  ArticleApp.h  pch.h
Article/src/Article/Config/: ConfigConvert.cpp  ConfigLoader.cpp
Article/src/Article/Console/: CVarCommands.cpp  Console.cpp  Console.h
Article/src/Article/Core/: Game.cpp  Game.h  Math.cpp  Math.h  TickThread.cpp  TickThread.h  UserEvents.h
Article/src/Article/ECS/: ECS.cpp  ECS.h  RegisterSystems.cpp  System.h
Article/src/Article/Gameplay/: CameraControllerSystem.cpp  CameraControllerSystem.h  RNGSystem.cpp  TransformComponent.h  TransformUpdateSystem.cpp
Article/src/Article/Gameplay/Physics/: DebugDrawSystem.cpp  DebugDrawSystem.h  PhysicsComponents.h  PhysicsSystem.cpp  PhysicsSystem.h
Article/src/Article/Gameplay/Player/: PlayerComponents.h  PlayerSystem.cpp  PlayerSystem.h
Article/src/Article/Gameplay/Sync/: ConfigReceiveSystem.cpp  ConfigReceiveSystem.h  Sync.h  SyncEventReceiveSystem.cpp  SyncInitSystem.cpp  SyncTransform.h  SyncTransformReceiveSystem.cpp  SyncTransformReceiveSystem.h  (+1 more)
Article/src/Article/Layers/: ConsoleLayer.cpp  ConsoleLayer.h  DiagnosticsLayer.cpp  DiagnosticsLayer.h  GameLayer.cpp  GameLayer.h  LevelEditorLayer.cpp  LevelEditorLayer.h  SplashScreenLayer.cpp  SplashScreenLayer.h
Article/src/Article/LevelEditor/: BrushSystem.cpp  ChunkBorderSystem.cpp  EditorCameraSystem.cpp  EditorCameraSystem.h  EditorTerrainStore.cpp  EditorTerrainStore.h  NewTerrainModal.cpp  TerrainVerticeSystem.cpp  ViewportPanel.cpp  ViewportPanel.h
Article/src/Article/Rendering/: DebugPhysicsRenderer.cpp  DebugPhysicsRenderer.h  FlickerSystem.cpp  FlickerSystem.h  RenderingComponents.h  RenderingSystem.cpp  RenderingSystem.h
Article/src/Article/Scenes/: GameScene.cpp  GameScene.h  LevelEditorScene.cpp  LevelEditorScene.h  NativeScenes.cpp  NativeScenes.h  SplashScreenScene.cpp  SplashScreenScene.h  VideoPlayerScene.cpp  VideoPlayerScene.h
Article/src/Article/Scripting/: ScriptContext.cpp  ScriptContext.h  ScriptLayer.cpp  ScriptLayer.h  ScriptScene.cpp  ScriptScene.h  TerrainData.cpp  TerrainData.h  UIFunctions.cpp  UIFunctions.h
Article/src/Article/Terrain/: DefaultTerrainStore.cpp  DefaultTerrainStore.h  NoiseStore.h  SimplexNoise.cpp  SimplexNoise.h  TerrainRenderer.cpp  TerrainRenderer.h  TerrainStore.h
Article/src/Article/UI/: UIClickSystem.cpp  UIClickSystem.h  UIComponents.h  UIHoverSystem.cpp  UIHoverSystem.h  UILayoutSystem.cpp  UILayoutSystem.h  UIRenderSystem.cpp  UITransformSortSystem.h
AssetBase/: CMakeLists.txt  config.yaml  preload.yaml  resources.yaml
AssetBase/.lab-cache/shaders/: batched_ps.hlsl.glsl  batched_vs.hlsl.glsl  emitter_draw_ps.hlsl.glsl  emitter_draw_vs.hlsl.glsl  emitter_emit_cs.hlsl.glsl  emitter_simulate_cs.hlsl.glsl  emitter_update_begin_cs.hlsl.glsl  emitter_update_end_cs.hlsl.glsl  gpusort_begin_cs.hlsl.glsl  gpusort_sort_cs.hlsl.glsl  gpusort_sort_inner_cs.hlsl.glsl  gpusort_sort_step_cs.hlsl.glsl  label_ps.hlsl.glsl  label_vs.hlsl.glsl  line_ps.hlsl.glsl  line_vs.hlsl.glsl  terrain_ps.hlsl.glsl  terrain_vs.hlsl.glsl
AssetBase/res/shaders/batched/: batched_ps.hlsl  batched_vs.hlsl
AssetBase/res/shaders/emitter/: emitter_draw_ps.hlsl  emitter_draw_vs.hlsl  emitter_emit_cs.hlsl  emitter_render_vs.hlsl  emitter_simulate_cs.hlsl  emitter_update_begin_cs.hlsl  emitter_update_end_cs.hlsl
AssetBase/res/shaders/emitter_wi/: emitter_draw_ps.hlsl  emitter_draw_vs.hlsl  emitter_emit_cs.hlsl  emitter_simulate_cs.hlsl  emitter_update_begin_cs.hlsl  emitter_update_end_cs.hlsl
AssetBase/res/shaders/gpusort/: gpusort_begin_cs.hlsl  gpusort_sort_cs.hlsl  gpusort_sort_inner_cs.hlsl  gpusort_sort_step_cs.hlsl
AssetBase/res/shaders/label/: label_ps.hlsl  label_vs.hlsl
AssetBase/res/shaders/line/: line_vs.hlsl
AssetBase/res/shaders/model/: model_ps.hlsl  model_vs.hlsl
AssetBase/res/shaders/postprocess/: postprocess_ps.hlsl  postprocess_vs.hlsl
AssetBase/res/shaders/terrain/: terrain_vs.hlsl
AssetBase/res/shaders/texture/: texture_vs.hlsl
AssetBase/src/AssetBase/: AssetBase.cpp  AssetBase.h  AssetPack.cpp  AssetPack.h
AssetBase/src/AssetBase/Resources/: FontLoader.cpp  FontLoader.h  FontSerializer.cpp  FontSerializer.h  ModelRes.cpp  ModelRes.h  ShaderRes.cpp  Texture2DRes.cpp  Texture2DRes.h
Lithium/: CMakeLists.txt
Lithium/src/: Lithium.h  lipch.h
Lithium/src/Lithium/Audio/: AudioContext.cpp  AudioContext.h  AudioCore.h
Lithium/src/Lithium/Core/: Application.cpp  Application.h  Assert.h  Core.h  Cursor.cpp  Cursor.h  Exceptions.h  Input.h  Layer.h  Log.h  Window.cpp  Window.h
Lithium/src/Lithium/ImGui/: ImGuiBuild.cpp  ImGuiRenderer.cpp  ImGuiRenderer.h
Lithium/src/Lithium/Renderer/: BatchRenderer.cpp  BatchRenderer.h  BatchRenderer2D.cpp  BatchRenderer2D.h  Buffer.cpp  Buffer.h  Camera.cpp  Camera.h  GPUGlobals.cpp  GPUSort.cpp  GPUSort.h  GraphicsContext.h  GraphicsFactory.cpp  GraphicsFactory.h  ImGuiRenderer.cpp  ImGuiRenderer.h  IndirectBuffer.cpp  IndirectBuffer.h  LineBatchRenderer.cpp  LineBatchRenderer.h  Model.cpp  Model.h  ParticleEmitter.cpp  ParticleEmitter.h  ParticleEmitterWI.cpp  ParticleEmitterWI.h  Pipeline.cpp  Pipeline.h  ReadbackBuffer.cpp  ReadbackBuffer.h  RenderStage.h  Renderer.cpp  Renderer.h  RendererEnums.h  ShaderBuffer.cpp  ShaderBuffer.h  StagingBuffer.cpp  StagingBuffer.h  Texture.h  UniformBuffer.h  (+1 more)
Lithium/src/Lithium/Resources/: ResourceManager.cpp  ResourceManager.h
Lithium/src/Lithium/Utility/: Random.cpp  Random.h  Timer.cpp  Timer.h
Lithium/src/Lithium/VideoPlayer/: AVPlayer.cpp  AVPlayer.h
(+102 files in other folders)
